k8s/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-api-canary
  labels:
    app: library-api
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-api
      version: canary
  template:
    metadata:
      labels:
        app: library-api
        version: canary
    spec:
      containers:
        - name: library-api
          image: gcr.io/secrets-465320/library-api:canary
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 10
