k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-api-stable
spec:
  selector:
    app: library-api
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: library-api-canary
spec:
  selector:
    app: library-api
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
