k8s/ingress.yaml
# Ingress principal - tráfico stable (80%)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-api-stable
                port:
                  number: 80
---
# Ingress canary - 20% del tráfico
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-api-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-api-canary
                port:
                  number: 80
